<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_templates"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Templates"
        app:showAsAction="never" />
</menu>

