...
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:clipToPadding="false"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:clipToPadding="false"/>
    </LinearLayout>
...
