...
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>

</LinearLayout>
...
